--- a/contact.html
+++ b/contact.html
@@ -14,17 +14,17 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">CODING WORLD</a>
+            <a class="navbar-brand" href="/coding world/">CODING WORLD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link " aria-current="page" href="/">HOME</a>
+                  <a class="nav-link " aria-current="page" href="/coding world/">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about.html">ABOUT US</a>
+                  <a class="nav-link" href="/coding world/about.html">ABOUT US</a>
                 </li><li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     TOPIC
@@ -38,7 +38,7 @@
                 </li>
               
                 <li class="nav-item active">
-                  <a class="nav-link" href="/contact.html">CONTACT US</a>
+                  <a class="nav-link" href="/coding world/contact.html">CONTACT US</a>
                 </li>
               </ul>
               <form class="d-flex">
